--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: LOOKING FOR PEACE
-email: lsanotes@qq.com
+email: lsanotes@live.com
 description: > # this means to ignore newlines until "baseurl:"
   Peace in life
 baseurl: "" # the subpath of your site, e.g. /blog/
